--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,137 @@
-body {
-  margin: 0;
-  padding: 0;
-}
+/* MAIN */
 
 :root {
   --text-color: #dadce1;
   --nav-size: 60px;
+}
+
+* { /*Clear all values*/
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+#navigation {
+  background-color:grey;
+  padding-bottom: 10px;
+}
+
+#navigation ul {
+  list-style: none;
+}
+
+#navigation ul li {
+  display: inline;
+  margin: 20px;
+  font-size: xx-large;
+}
+
+#title {
+  padding: 15px;
+}
+
+/* FONTS */
+
+h1 {
+	font-family: Lora;
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 700;
+	line-height: 26.4px;
+}
+
+h3 {
+	font-family: Lora;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 700;
+	line-height: 15.4px;
+}
+
+p {
+	font-family: Merriweather;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
+}
+
+blockquote {
+	font-family: Merriweather;
+	font-size: 21px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+pre {
+	font-family: Merriweather;
+	font-size: 13px;
+	font-style: normal;
+  font-variant: normal;
+}
+
+/* PAGES */
+
+#flexcontainer {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#content {
+  flex: auto;
+  flex: 1;
+}
+
+#main {
+  background-image: linear-gradient(to bottom right, #ff4e50 0%, #f9d423 100%);
+}
+
+#main p {
+  font-size: large;
+  max-width: 20%;
+  margin: auto;
+  padding: 50px;
+  line-height: 2;
+}
+
+#climate {
+  background-image: linear-gradient(to bottom right, #16a085 0%, #f4d03f 100%);
+}
+
+#scroll {
+  background-image: linear-gradient(to bottom right, #d558c8 0%, #24d292 100%);
+}
+
+#kawaii {
+  background-image: linear-gradient(to bottom right, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+}
+
+#footer {
+  background-color: black;
+  color: var(--text-color);
+  padding: 5px;
+  font-size: small;
+}
+
+/* SMALLER COMPONENTS */
+
+a {
+  color: var(--text-color);
+  text-decoration: none;
 }
