--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ pre {
   background-image: linear-gradient(to bottom right, #ff4e50 0%, #f9d423 100%);
 }
 
-#content p {
+#scroll p {
   font-size: large;
   padding: 50px;
   line-height: 2;
@@ -117,6 +117,35 @@ pre {
 
 .climate {
   background-image: linear-gradient(to bottom right, #16a085 0%, #f4d03f 100%);
+}
+
+#climate div {
+  padding: 10px;
+  margin: 20px 0;
+  min-height: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(70, 104, 81, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+#climate div:nth-child(odd){
+  margin-right: auto;
+  width: 50%;
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+#climate div:nth-child(even){
+  margin-left: auto;
+  width: 50%;
+  border-left: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+#climate div p {
+  font-size: x-small;
+  line-height: normal;
 }
 
 .scroll {
@@ -143,4 +172,15 @@ pre {
 a {
   color: var(--text-color);
   text-decoration: none;
+}
+
+a svg {
+  padding: 5px;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+
+a svg:hover {
+  filter: brightness(1.2);
+  background: gray;
 }
